style: Use correct colors for dark mode support

--- a/components/common/ConnectWallet/styles.module.css
+++ b/components/common/ConnectWallet/styles.module.css
@@ -33,7 +33,7 @@
   position: absolute;
   right: -4px;
   bottom: 0;
-  background: white;
+  background: var(--color-background-paper);
   border-radius: 50%;
 }
 
